teste-segundo=commit

--- a/wireframe7/wireframe7.html
+++ b/wireframe7/wireframe7.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="wireframe7.css">
 </head>
 <body>
+    
+    <nav class="cabecalho">
+        <div class="logo">
+            <img src="imagens/logo.png" alt="Logo" width="40px" />
+            <h3>♻️ Fortes</h3>
+        </div>
+
+        <div class="menu-central">
+            <a href="../loc-tempo-real/telaprincipal.html">Tela Principal</a>
+            <a href="../wireframe8/wireframe8.html">Notícias</a>
+            <a href="../wireframe10/wireframe10.html">Estatísticas</a>
+            <a href="../wireframe2/wireframe2.html">Como Separar?</a>
+            <a href="../investidores/investidores.html">Nossos Investidores</a>
+            <a href="#">Meu Perfil</a>
+        </div>
+
+        <div class="acoes">
+            <div class="pesquisa">
+                <input type="text" placeholder="Pesquisar..." />
+                <img src="imagens/noun-search-5079148.svg" alt="Buscar" width="20px" />
+            </div>
+            <button class="login-btn" onclick="redirecionar()">Login</button>
+        </div>
+    </nav>
+    
     <header class="welcome-section">
         <div class="welcome-text">
             <h1>Bem-vindo ao gerenciamento de coleção de Residuos</h1>
