alterações finais cooperativas

--- a/wireframe7/wireframe7.html
+++ b/wireframe7/wireframe7.html
@@ -42,7 +42,9 @@
             <h1>Histórico de Ações</h1>
             <p>Acompanhe seus descartes, com dados financeiros e operacionais.</p>
         </div>
-
+        <div class="voltar" style="display: flex; justify-content: center; padding-top: 50px;">
+            <button onclick="voltar()">Voltar às informações da empresa</button>
+        </div>
         <section class="updates-section">
             <h2>Descarte de Resíduos</h2>
             <div class="updates">
