terminando ligações entre catadores

--- a/wireframe1/wireframe1.html
+++ b/wireframe1/wireframe1.html
@@ -86,7 +86,11 @@
                 </div>
             </div>
         </section>
-
+        <h3 style="display: flex; justify-content: center;">Estando no ponto de coleta e tendo pegado os itens, registre-os para dar baixa nos itens</h3>
+        <p style="display: flex; justify-content: center;">↓</p>
+        <div class="registrar">
+            <button onclick="registre()">Registrar Coleta</button>
+        </div>
         <section class="notify-section">
             <h2>Notifique-me</h2>
             <p>Preencha o formulário para receber notificações sobre novos materiais recicláveis</p>
