--- a/wireframe5/wireframe5.html
+++ b/wireframe5/wireframe5.html
@@ -14,6 +14,7 @@
 <body>
     <header class="topo">
         <div class="navbar">
+             <button class="voltar" onclick="voltar()" style="padding-right: 16px;">← Voltar</button>
             <div class="profile">
                 <img src="https://i.pravatar.cc/40" alt="Foto do Usuário">
                 <span class="profile-name">
