--- a/wireframe3-4/wireframe3-4.html
+++ b/wireframe3-4/wireframe3-4.html
@@ -11,28 +11,31 @@
 
 <body>
   <nav class="cabecalho">
-    <div class="logo">
-        <img src="imagens/logo.png" alt="Logo" width="40px" />
-        <h3>♻️ Nome empresa</h3>
+    <button class="voltar" onclick="voltar()" style="padding-right: 16px;">← Voltar</button>
+    <div class="profile">
+      <img src="https://i.pravatar.cc/40" alt="Foto do Usuário">
+      <span class="profile-name">
+        <h3><b>Eduardo Tebas</b></h3>
+      </span>
     </div>
 
     <div class="menu-central">
-        <a href="../loc-tempo-real/telaprincipal.html">Tela Principal</a>
-        <a href="../wireframe8/wireframe8.html">Notícias</a>
-        <a href="../wireframe10/wireframe10.html">Estatísticas</a>
-        <a href="../wireframe2/wireframe2.html">Como Separar?</a>
-        <a href="../investidores/investidores.html">Nossos Investidores</a>
-        <a href="#">Meu Perfil</a>
+      <a href="../loc-tempo-real/telaprincipal.html">Tela Principal</a>
+      <a href="../wireframe8/wireframe8.html">Notícias</a>
+      <a href="../wireframe10/wireframe10.html">Estatísticas</a>
+      <a href="../wireframe2/wireframe2.html">Como Separar?</a>
+      <a href="../investidores/investidores.html">Nossos Investidores</a>
+      <a href="#">Meu Perfil</a>
     </div>
 
     <div class="acoes">
-        <div class="pesquisa">
-            <input type="text" placeholder="Pesquisar..." />
-            <img src="imagens/noun-search-5079148.svg" alt="Buscar" width="20px" />
-        </div>
-        <button class="login-btn" onclick="redirecionar()">Login</button>
+      <div class="pesquisa">
+        <input type="text" placeholder="Pesquisar..." />
+        <img src="imagens/noun-search-5079148.svg" alt="Buscar" width="20px" />
+      </div>
+      <button class="login-btn" onclick="redirecionar()">Login</button>
     </div>
-</nav>
+  </nav>
 
   <div class="paiTodos">
     <header class="boasvindas">
@@ -95,8 +98,8 @@
         <option>Outro</option>
       </select>
 
-      <button class="botao-envio"  onclick="enviar()">Enviar sugestão</button>
-        <p id="mensagem" style="text-align:center; color: green; font-weight: bold;"></p>
+      <button class="botao-envio" onclick="enviar()">Enviar sugestão</button>
+      <p id="mensagem" style="text-align:center; color: green; font-weight: bold;"></p>
     </section>
     <footer class="rodape">
       <p>Fortes © 2025 – Todos os direitos reservados</p>
