--- a/wireframe7/wireframe7.html
+++ b/wireframe7/wireframe7.html
@@ -17,7 +17,7 @@
     <nav class="cabecalho">
         <div class="logo">
             <img src="imagens/logo.png" alt="Logo" width="40px" />
-            <h3>♻️ Fortes</h3>
+            <h3>♻️ Nome Empresa</h3>
         </div>
 
         <div class="menu-central">
